# agentic-blah-ai-llm-blah

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.mcp-agent/: mcp-agent.config.yaml
mcp/git-clone-mcp-server/: server.py
mcp/python-lsp-mcp-server/: server.py
mcp/python-lsp-mcp-server/src/: engine.py  parser.py  server.py
mcp/python-lsp-mcp-server/tests/: test_engine.py  test_parser.py
notebooks/: llamaindex.ipynb  mcp-agent.py  mcp.ipynb  nebius.ipynb  openai-agents.ipynb  test_mcp.py  unit.ipynb
